Attempt iOS gap fix

--- a/app/styles/sass/partials/_base.scss
+++ b/app/styles/sass/partials/_base.scss
@@ -409,7 +409,7 @@ hr {
 
   text-align: left;
   position: absolute;
-  top: 100px;
+  top: 50px;
 
 }
 
@@ -445,7 +445,7 @@ input:focus {
 }
 
 swiper {
-  position:fixed;
+  position:absolute;
   top:0;
   right:0;
   bottom:0;
