--- a/app/styles/stylesheets/screen.css
+++ b/app/styles/stylesheets/screen.css
@@ -571,7 +571,7 @@ hr {
   -webkit-transform: translateZ(0);
   text-align: left;
   position: absolute;
-  top: 100px;
+  top: 50px;
 }
 
 /* line 417, ../sass/partials/_base.scss */
@@ -628,7 +628,7 @@ input:focus {
 
 /* line 447, ../sass/partials/_base.scss */
 swiper {
-  position: fixed;
+  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
